# vlc-android-gvr

./: build.gradle  pax_global_header  settings.gradle
api/: build.gradle
java-libs/axmlrpc/: build.gradle
libvlc/: build.gradle
libvlc/jni/: CMakeLists.txt
vlc-android/: AndroidManifest.xml  build.gradle
vlc-android/src/main/java/org/videolan/vlc/gui/: MainActivity.java
vlc-android/src/main/java/org/videolan/vlc/gui/helpers/: UiTools.java
vlc-android/src/main/java/org/videolan/vlc/gui/preferences/: Advanced.java
vlc-android/src/main/java/org/videolan/vlc/gui/tv/preferences/: Advanced.java
